# povmodeler

./: AUTHORS  BUGS  CMakeLists.ok  CMakeLists.txt  ChangeLog  EnabledFeatures.txt  INSTALL  Messages.sh  README  REQUIREMENTS  StyleConvention  TODO  aaaa-port.txt  add-png-icons.qrc  baseinsertrules.xml  baseinsertrules.xml~  config-kpovmodeler.h  config-povmodeler.h  configure.in.bot  install_manifest.txt  kdoc.rules  kpovmodeler.desktop  kpovmodeleradaptator.cpp  kpovmodeleradaptator.h  kpovmodelerbrowser.rc  kpovmodelerpart.desktop  kpovmodelershell.rc  kpovmodelerui.rc  kpovmodelerui.rc~  libkpovmodeler_export.h  libpovmodeler_export.h  main.cpp  org.kde.kpovmodeler.xml  org.povmodeler.xml  pm2dcontrolpoint.cpp  pm2dcontrolpoint.h  pm3dcontrolpoint.cpp  pm3dcontrolpoint.h  pmactions.cpp  pmactions.h  (+523 more)
examples/includes/inlined/: chars.kpm  finish.kpm  glass.kpm  golds.kpm  metals.kpm  shapes.kpm  shapes2.kpm  shapesq.kpm  skies.kpm  stars.kpm  stones1.kpm  stones2.kpm  textures.kpm  woods.kpm
examples/includes/original/: chars.kpm  finish.kpm  glass.kpm  golds.kpm  metals.kpm  shapes.kpm  shapes2.kpm  shapesq.kpm  skies.kpm  stars.kpm  stones1.kpm  stones2.kpm  textures.kpm  woods.kpm
examples/scenes/advanced/: ants.kpm  bee.kpm  ink.kpm  table.kpm
examples/scenes/csg/: cheese.kpm  emptybox.kpm  heightfield.kpm
examples/scenes/interior/: cubes.kpm  media1.kpm  media2.kpm  media3.kpm  spheres.kpm
examples/scenes/lights/: arealight.kpm  arealight2.kpm  spotlight.kpm
examples/scenes/objects/: allobjects.kpm  fractals.kpm  lathe.kpm  prism.kpm  sor.kpm  superellipsoid.kpm  text.kpm
icons/povicons/: index.theme
icons/povicons/small/: rnm
unused/: pmlibrarybrowser.cpp  pmlibrarybrowser.h  pmlibraryentrypreview.cpp  pmlibraryentrypreview.h  pmlibraryhandle.cpp  pmlibraryhandle.h  pmlibraryhandleedit.cpp  pmlibraryhandleedit.h  pmlibraryiconview.cpp  pmlibraryiconview.h  pmlibrarymanager.cpp  pmlibrarymanager.h  pmlibraryobject.cpp  pmlibraryobject.h  pmlibraryobjectsearch.cpp  pmlibraryobjectsearch.h  pmobjectlibrarysettings.cpp  pmobjectlibrarysettings.h
